# projet-conception-logicielle

./: .dockerignore  .env.local  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: dockerhub-backend.yml  python-lint-format.yml  tests.yml
backend/: .env.template  .env.template2  Dockerfile  README.md  main.py  pyproject.toml  ruff.toml
backend/business_object/: credentials.py  ingredient.py  inventaire.py  jour_repas.py  liste_courses.py  planning_repas.py  plat.py  utilisateur.py
backend/config/: app_config.py
backend/dao/: exceptions.py  open_food_facts_dao.py  open_prices_dao.py  planning_dao.py  prix_api_dao.py  spoonacular_dao.py  utilisateur_dao.py
backend/dao/configuration/: db_connection.py
backend/dao/spoonacular_dao/: spoonacular_dao.py  spoonacular_dao_planning_repas.py  spoonacular_dao_plat.py
backend/data/: init_db.sql  pop_db.sql
backend/dto/: article_courses_dto.py  ingredient_dto.py  jour_repas_dto.py  liste_courses_dto.py  planning_repas_dto.py  plat_dto.py  utilisateur_dto.py
backend/services/: liste_courses_service.py  planning_repas_service.py  plat_service.py  prix_service.py  utilisateur_service.py
backend/tests/business_object/: test_utilisateur.py
backend/tests/services/: test_liste_courses_service.py
backend/tests/unitaire/test_service/: test_planning_repas_service.py  test_plat_service.py
backend/utils/: reset_database.py  securite.py  security_dependencies.py  singleton.py
backend/web/: liste_courses_router.py  systeme_router.py  utilisateur_router.py
(+5 files in other folders)
