[project]
name = "projet-conception-logicielle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "requests>=2.31",
    "python-dotenv>=1.2.2",
    "psycopg2>=2.9.11",
]

[dependency-groups]
dev = [
    "ruff>=0.14.13",
    "pytest>=8.0",
]
